# RivaAI

./: .env.example  .gitignore  DEPLOYMENT_NOTES.md  KNOWLEDGE_BASE_COMPLETE.md  Makefile  README.md  SETUP.md  TASK_1_COMPLETION_SUMMARY.md  TASK_4.1_COMPLETION_SUMMARY.md  TASK_7.1_COMPLETION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
.hypothesis/tmp/: tmp0o4d20ct  (+2 more)
docs/: 24_HOUR_DEPLOYMENT_GUIDE.md  2_DAY_SPRINT_PLAN.md  AWS_ARCHITECTURE.md  AWS_DEPLOYMENT.md  AWS_RDS_PROXY_SETUP.md  AWS_TEAM_SETUP.md  KNOWLEDGE_BASE_SETUP.md  TASK_7.1_SETUP_GUIDE.md  TEAM_DISTRIBUTION.md
examples/: retrieval_example.py  speech_processor_example.py
rivaai/: __init__.py  main.py
scripts/: deploy_lambda_function.sh  deploy_lambda_layer.sh  init_database.sql  load_knowledge_base.py  load_sample_data.py  setup_aws_infrastructure.sh  setup_knowledge_base.ps1  setup_knowledge_base.sh  setup_knowledge_base_docker.ps1  verify_knowledge_base.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_knowledge_base.py  test_pii_masker.py  test_property_barge_in_latency.py  test_property_call_establishment.py  test_property_rag_formatter.py  test_property_reranker.py  test_property_retrieval_system.py  test_property_stt.py  test_property_tts.py  test_property_tts_latency.py  test_property_vector_search.py  test_rag_formatter.py  test_redis.py  test_reranker.py  test_retrieval_system.py  test_session_pii_integration.py  test_speech_processor.py  test_speech_processor_properties.py  test_telephony_gateway.py  test_tts_processor.py  test_vector_search.py
(+658 files in other folders)
